# fastqc-parser

./: .editorconfig  .gitignore  Cargo.toml  README.md  script.ts  toggle.ts  tsconfig.json
src/: main.rs
templates/: report.html
