[package]
name = "fastqc_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1"
askama = "0.10"
chrono = "0.4"
rustc-hash = "1"
itertools = "0.10"
clap = "3.0.0-rc.4"
